@@ -58,7 +58,8 @@ HiddenBASiCS_MCMC_Start <- function(Data,
     nCountsBio <- t( t(CountsBio) / (phi0 * s0) )
     meansBio <- rowMeans(nCountsBio)
     # +1 to avoid zeros as starting values
-    mu0 <- c(meansBio + 1, metadata(Data)$SpikeInput)
+    #mu0 <- c(meansBio + 1, metadata(Data)$SpikeInput)
+    mu0 <- meansBio + 1
   }
   else {
     s0 <- size_scran
@@ -93,7 +94,7 @@ HiddenBASiCS_MCMC_Start <- function(Data,
     ls.phi0 <- ifelse(n < 200, pmax(2 * log(n), ls.phi0), 11)
     ls.nu0 <- pmax(2 * log(0.02 * abs(log(nu0))), ls.nu0)
     ls.theta0 <- pmax(2 * log(0.02 * abs(log(theta0))), ls.theta0)
-    # Convert vectors to numeric values
+    # Convert to numeric values
     ls.phi0 <- as.numeric(ls.phi0)
     ls.theta0 <- as.numeric(ls.theta0)
 
@@ -109,7 +110,7 @@ HiddenBASiCS_MCMC_Start <- function(Data,
       out$beta0 <- mvrnorm(1, PriorParam$m, PriorParam$V)
       out$sigma20 <- rgamma(1, PriorParam$a.sigma2, PriorParam$b.sigma2)
       out$lambda0 <- rgamma(q.bio, shape = PriorParam$eta/2,
-                            rate = PriorParam$eta/2)
+                        rate = PriorParam$eta/2)
     }
 
     return(out)
